assets/main.css
body {
    font-weight: 300;
}

.navbar-fixed {
    height: 50px;
}

nav {
    height: 50px;
    line-height: 50px;
}

.fade-color-nav {
    background-color: black;
}

.navbar {
    padding: 0 2%;
}

#nav-mobile > li > a {
    font-size: 1.3rem;
    height: 50px;
}

#page-title {
    font-size: 2rem;
}

#dropdown {
    width: 10rem !important;
}

.slider {
    height: calc(100vh - 50px) !important;
    background-color: black;
}

.slides {
    height: calc(100vh - 50px) !important;
}

.slides li {
    background-color: black;
}

.slides li img {
    opacity: 0.5;
    filter: alpha(opacity=50);
    height: 100%;
    width: auto;
}

.slider-text {
    position: absolute;
    z-index: 10;
    bottom: 30%;
    left: 0;
    right: 0;
}

.slider .indicators {
    z-index: 10;
    height: 50px;
}

.slider .indicators .indicator-item {
    background-color: rgba(255, 255, 255, 0.3);
}

.slider .indicators .indicator-item.active {
    background-color: white;
}

#hero-intro-text {
    font-size: 5rem;
}

#hero-title {
    font-size: 6rem;
}

.typed-cursor{
    font-size: 8rem;
    opacity: 1;
    -webkit-animation: blink 1s infinite;
    -moz-animation: blink 1s infinite;
    animation: blink 1s infinite;
}

@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

main {
    margin: 60px 0;
    min-height: calc(100vh - 209px);
}

.to-underline {
    padding-bottom: 3px;
}

.to-underline:after {
    content: '';
    display: block;
    margin: 0 auto;
    height: 3px;
    width: 0;
    background-color: transparent;
    transition: width .5s ease, background-color .5s ease;
}

.underline:after {
    width: 22rem !important;
    max-width: 70%;
    background-color: black !important;
}

#news-div {
    margin-left: auto;
    margin-right: auto;
    max-width: 40rem;
}

#news-div .card-panel {
    margin-top: 30px;
}

.parallax-container {
    max-height: 50vh;
}

.prev-next-divider {
    margin-top: 70px;
}

.prev-next-div i {
    font-size: 3rem;
}

.footer-copyright {
    padding-bottom: 5px;
    line-height: 2;
}

.footer-copyright i.material-icons {
    position: relative;
    top: 6px;
}

.animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

.animated.infinite {
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
}

.pulse {
    -webkit-animation-name: pulse;
    animation-name: pulse;
}

@-webkit-keyframes pulse {
    from {
        -webkit-transform: scale3d(.7, .7, .7);
        transform: scale3d(.7, .7, .7);
        }
    50% {
        -webkit-transform: scale3d(1, 1, 1);
        transform: scale3d(1, 1, 1);
    }
    to {
        -webkit-transform: scale3d(.7, .7, .7);
        transform: scale3d(.7, .7, .7);
    }
}

@keyframes pulse {
    from {
        -webkit-transform: scale3d(.7, .7, .7);
        transform: scale3d(.7, .7, .7);
    }
    50% {
        -webkit-transform: scale3d(1, 1, 1);
        transform: scale3d(1, 1, 1);
    }
    to {
        -webkit-transform: scale3d(.7, .7, .7);
        transform: scale3d(.7, .7, .7);
    }
}

@media (max-width: 600px) {
    .slider-text {
        bottom: 45%;
    }
    #hero-intro-text {
        font-size: 3rem;
    }
    #hero-title {
        font-size: 3.5rem;
    }
    .typed-cursor{
        font-size: 4.5rem;
    }
    .parallax-container {
        max-height: 60vw;
    }
}

